--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,13 +20,14 @@ services:
     unigine_test_mysql:
         image: mariadb:latest
         ports:
-            - "3306:3306"
+            - "3307:3306"
         volumes:
          - ./etc/mysql:/etc/mysql
          - ./logs/mysql:/var/log/mysql
          - ./mysql:/var/lib/mysql
          - ./mysql-files:/var/lib/mysql-files
          - ./data/url_shortener.sql:/docker-entrypoint-initdb.d/dump.sql
+         - ./data/create_urls_table.sql:/docker-entrypoint-initdb.d/create_urls_table.sql
         environment:
             MYSQL_ROOT_PASSWORD: root
             MYSQL_DATABASE: url_shortener
